--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@prisma/extension-accelerate": "^2.0.1",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.523.0",
@@ -24,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.177.0",
     "tsx": "^4.20.3"
   },
   "devDependencies": {
