--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "prisma": "^6.10.1",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "three": "^0.177.0",
     "tsx": "^4.20.3"
