feat: implement execution queue with status management and reset functionality

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "bun db:reset-queue && next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,7 +11,8 @@
     "migrate-deploy": "prisma migrate deploy --schema src/prisma/schema.prisma && npx prisma generate --schema src/prisma/schema.prisma",
     "add-existing-mc-regions": "npx tsx src/scripts/add-existing-mc-regions.ts",
     "db:create": "npx tsx src/scripts/add-database.ts",
-    "setup": "bun i && bun db:create && bun migrate-deploy && bun add-existing-mc-regions"
+    "setup": "bun i && bun db:create && bun migrate-deploy && bun add-existing-mc-regions",
+    "db:reset-queue": "npx tsx src/scripts/reset-queue.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
