--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "tailwind-merge": "^3.3.1",
     "three": "^0.177.0",
     "tsx": "^4.20.3",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
