--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "prisma": "^6.10.1",
+    "puppeteer": "^24.11.1",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
